on a vérifier que les fichiers soit liés

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Révision javascript ARSENE</title>
-</head>
+	<link rel="stylesheet" href="style.css"> </head>
 
-<body> </body>
+<body>
+	<h1>Révision Javascript </h1>
+	<script src="app.js"></script>
+</body>
 
 </html>
