--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="UTF-8">
-	<title>Révision javascript ARSENE</title>
-	<link rel="stylesheet" href="style.css"> </head>
-
+	<title>Révision Java-script</title></title>
+</head>
 <body>
-	<h1>Révision Javascript </h1>
-	<script src="app.js"></script>
+<h1>Révision Javas-script le 8/10/2016</h1>
+<script src="app.js"></script>
+	
 </body>
-
 </html>
