--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-	<title>Révision Java-script</title></title>
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<title>Révision Java-script</title>
+	</title>
 </head>
+
 <body>
-<h1>Révision Javas-script le 8/10/2016</h1>
-<script src="app.js"></script>
-	
+	<h1>Révision Javas-script le 8/10/2016</h1>
+	<script src="app.js"></script>
 </body>
+
 </html>
